@@ -315,18 +315,22 @@ void search_file_single_match(char * const addr, size_t len, const char * const 
  * @param retval
  * The return value if a match is found.
  *
+ * @return
+ * 1 if found the path, 0 if not.
+ *
  * @todo
  * Make this check smarter so it does some understanding of the excluded paths
  */
-#define CHECK_EXCLUDED_PATHS(fpath, retval) \
-    if (settings.excluded_paths){ \
-        if (!settings.base_search_path_length) \
-            settings.base_search_path_length = strlen(fpath) + 1; \
-        for (DIR_LIST *pth = settings.excluded_paths; pth; pth = pth->next){ \
-            if (strcmp(pth->dir, fpath + settings.base_search_path_length) == 0) \
-                return retval; \
-        } \
+inline int check_excluded_paths(fpath){
+    if (settings.excluded_paths){
+        if (!settings.base_search_path_length)
+            settings.base_search_path_length = strlen(fpath) + 1;
+        for (DIR_LIST *pth = settings.excluded_paths; pth; pth = pth->next){
+            if (strcmp(pth->dir, fpath + settings.base_search_path_length) == 0)
+                return 1;
+        }
     }
+}
 
 #if defined HAVE_NFTW
 /**
@@ -342,7 +346,8 @@ void search_file_single_match(char * const addr, size_t len, const char * const 
  * @retval 0 nftw(3) should continue parsing as expected.
  */
 int onWalk(const char *fpath, const struct stat *sb, int typeflag, struct FTW *ftwbuf){
-    CHECK_EXCLUDED_PATHS(fpath, FTW_SKIP_SUBTREE);
+    if (check_excluded_paths(fpath) == 1)
+	return FTW_SKIP_SUBTREE;
     switch (typeflag){
     case FTW_D:
         // No reason to make this check if no directories have been excluded
@@ -389,9 +394,8 @@ void search_folder(const char *fpath){
         while ((directory = readdir(mapsDirectory))){
             if (strcmp(directory->d_name, ".") == 0 || strcmp(directory->d_name, "..") == 0)
                 continue;
-	    // Yes, there is supposed to be nothing after the comma.
-	    // Because this is a void function.
-	    CHECK_EXCLUDED_PATHS(fpath, );
+	    if (check_excluded_paths(fpath) == 1)
+		return;
 	    /*
 	     * We add three to the length of the two pieces so we have enough
 	     * for both a null terminator and both slashes if necessary.
@@ -474,8 +478,9 @@ void search_folder(const char *fpath){
     intptr_t handle_ptr;
     struct _finddata_t *fileinfo;
     char *currentDir;
-    // Make sure we don't want to skip this function already.
-    CHECK_EXCLUDED_PATHS(fpath, );
+    // Make sure we don't want to skip this folder already.
+    if (check_excluded_paths(fpath) == 1)
+	return;
     // Now we enter the search itself.
     handle_ptr = _findfirst(fpath, fileinfo);
     // Check for a failure condition -- This will only happen on first try, so don't put it in the loop.
