@@ -2,6 +2,7 @@
 	* CMakeLists.txt: Add condition where we add fileperuser to the system path in Windows.
 	* add_to_system_path.bat: Add script to append fileperuser's path to the system path.
 	* README: Update to reflect new implementation using io.h.
+	* search.c: Refactor the path exclusion check to be an inline function instead of a macro substitution.
 
 2016-11-19  SilverNexus
 	* CMakeLists.txt: Add check for unistd.h in configuration. MSVC does not have it.
